feat: enhance motion management and visibility handling

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -145,6 +145,7 @@
     "boosts": "Boosty",
     "boostItUp": "Přidat boost",
     "boostNoBoostsAvailable": "Vyčerpali jste všechny boosty tento měsíc. Více příští měsíc!",
+    "rateLimitError": "Wow, klídek! Tvoje akce má cooldown. Zkus to za chvilku.",
     "boostedBy": "Boostnuto od",
     "and": "a",
     "onePrivateBooster": "1 soukromý",
