feat: add Check-In and Watch Later pages with client

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -18,6 +18,7 @@
     "home": "Dom\u016f",
     "upcoming": "Akce",
     "library": "Z\u00e1znamy",
+    "watchLater": "Watch Later",
     "crew": "Crew",
     "photos": "Fotky",
     "faq": "FAQ",
@@ -141,6 +142,10 @@
     "spark": "Zážeh",
     "sparks": "Zážehů",
     "lightItUp": "Rozžehni to",
+    "watchLater": "Watch Later",
+    "addToWatchLater": "Přidat do Watch Later",
+    "removeFromWatchLater": "Odebrat z Watch Later",
+    "inWatchlist": "Uloženo",
     "boost": "Boost",
     "boosts": "Boosty",
     "boostItUp": "Přidat boost",
@@ -416,6 +421,45 @@
     "homeDescription": "{brandName} je komunita herních vývojářů. Pořádáme meetupy v {prague} a {zlin}. Doraž na přednášku a pokec.",
     "libraryTitle": "Knihovna | {brandName}",
     "libraryDescription": "Archiv Bonfire přednášek o techu, artu a produkci, včetně live podcastů.",
+    "watchLaterTitle": "Watch Later | {brandName}",
+    "watchLaterPage": {
+      "title": "Watch Later",
+      "subtitle": "Uložené přednášky ke shlédnutí později.",
+      "empty": "Zatím tu nic není.",
+      "emptyAction": "Projděte knihovnu a uložte si přednášky, které chcete vidět.",
+      "saved": "Uloženo {count} videí",
+      "savedOne": "Uloženo 1 video",
+      "remove": "Odebrat",
+      "loading": "Načítáme váš watchlist...",
+      "error": "Nepodařilo se načíst watchlist"
+    },
+    "checkIn": {
+      "title": "Check-in na akci | {brandName}",
+      "description": "Ukažte tento QR u vstupu pro check-in a odměny.",
+      "pageTitle": "Check-in",
+      "pageSubtitle": "Ukažte tento QR kód u vstupu",
+      "refresh": "Obnovit",
+      "refreshing": "Obnovuji...",
+      "expiresAt": "Platí do {time}",
+      "ticket": {
+        "header": "Bonfire Events",
+        "label": "Check-in pas"
+      },
+      "tips": {
+        "title": "Tipy",
+        "brightness": "Zvyšte jas displeje pro snadnější skenování",
+        "automatic": "Váš QR kód se aktualizuje automaticky",
+        "manual": "V případě potřeby klikněte na Obnovit"
+      },
+      "error": {
+        "title": "Nepodařilo se načíst vstupenku",
+        "description": "Zkus to prosím znovu, nebo kontaktuj náš tým.",
+        "retry": "Zkusit znovu"
+      }
+    },
+    "watchLaterDescription": "Uložené přednášky ke shlédnutí později.",
+    "checkInTitle": "Check-in na akci | {brandName}",
+    "checkInDescription": "Ukažte tento QR u vstupu pro check-in a odměny.",
     "crewTitle": "Crew | {brandName}",
     "crewDescription": "Poznej crew Bonfire v {prague} a {zlin}.",
     "pressTitle": "Press kit | {brandName}",
@@ -889,6 +933,8 @@
     "details": "Údaje",
     "signOut": "Odhlásit se",
     "viewProfile": "Zobrazit profil",
+    "watchLater": "Watch Later",
+    "checkIn": "Check-in",
     "name": {
       "label": "Jméno",
       "empty": "Nenastaveno",
