feat: refactor user preferences and roles management; update auth logic and UI components

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -433,30 +433,6 @@
       "loading": "Načítáme váš watchlist...",
       "error": "Nepodařilo se načíst watchlist"
     },
-    "checkIn": {
-      "title": "Check-in na akci | {brandName}",
-      "description": "Ukažte tento QR u vstupu pro check-in a odměny.",
-      "pageTitle": "Check-in",
-      "pageSubtitle": "Ukažte tento QR kód u vstupu",
-      "refresh": "Obnovit",
-      "refreshing": "Obnovuji...",
-      "expiresAt": "Platí do {time}",
-      "ticket": {
-        "header": "Bonfire Events",
-        "label": "Check-in pas"
-      },
-      "tips": {
-        "title": "Tipy",
-        "brightness": "Zvyšte jas displeje pro snadnější skenování",
-        "automatic": "Váš QR kód se aktualizuje automaticky",
-        "manual": "V případě potřeby klikněte na Obnovit"
-      },
-      "error": {
-        "title": "Nepodařilo se načíst vstupenku",
-        "description": "Zkus to prosím znovu, nebo kontaktuj náš tým.",
-        "retry": "Zkusit znovu"
-      }
-    },
     "watchLaterDescription": "Uložené přednášky ke shlédnutí později.",
     "checkInTitle": "Check-in na akci | {brandName}",
     "checkInDescription": "Ukažte tento QR u vstupu pro check-in a odměny.",
@@ -1066,6 +1042,30 @@
     "copySuccess": "Zkopírováno!",
     "copyError": "Kopírování se nezdařilo",
     "copyIdLabel": "Kopírovat ID"
+  },
+  "checkIn": {
+    "title": "Check-in na akci | {brandName}",
+    "description": "Ukažte tento QR u vstupu pro check-in a odměny.",
+    "pageTitle": "Check-in",
+    "pageSubtitle": "Ukažte tento QR kód crew",
+    "refresh": "Obnovit",
+    "refreshing": "Obnovuji...",
+    "expiresAt": "Platí do {time}",
+    "ticket": {
+      "header": "Bonfire Events",
+      "label": "Check-in pas"
+    },
+    "tips": {
+      "title": "Tipy",
+      "brightness": "Zvyšte jas displeje pro snadnější skenování",
+      "automatic": "Váš QR kód se aktualizuje automaticky",
+      "manual": "V případě potřeby klikněte na Obnovit"
+    },
+    "error": {
+      "title": "Nepodařilo se načíst vstupenku",
+      "description": "Zkus to prosím znovu, nebo kontaktuj náš tým.",
+      "retry": "Zkusit znovu"
+    }
   },
   "error": {
     "title": "Něco se pokazilo",
